@startuml CarDataModel

package models {

    enum FuelType {
        PETROL
        DIESEL
        LPG
    }

    enum VehicleType {
        PASSENGER_CAR
        LIGHT_COMMERCIAL_VEHICLE
    }

    abstract class Car <<sealed>> {
        +id: Int
        +ownerId: Int
        +licensePlate: String
        +brand: String
        +model: String
        +productionYear: Int
        +trim: String?
        +color: String
        +seats: Int
        +doors: Int?
        +vehicleType: VehicleType
        +readyToDriveWeightKg: Int
        +consumptionCombined: Double
        +co2EmissionCombined: Double
    }

    class ICECar <<data>> {
        +fuelType: FuelType
        +tankCapacityL: Double
        +automaticTransmission: Boolean
    }

    class BEVCar <<data>> {
        +batteryCapacityKWh: Double
    }

    class FCEVCar <<data>> {
        +tankCapacityKgH2: Double
    }

    Car <|-- ICECar
    Car <|-- BEVCar
    Car <|-- FCEVCar

    Car --> VehicleType
    ICECar --> FuelType
}

@enduml